--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@humayun/react-hook",
   "version": "1.0.0",
   "description": "This is just testing purpose react hook that will created based on rest country api.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:dev": "rollup -c --envireonment NODE_ENV:development",
+    "build": "rollup -c --environment NODE_ENV:production"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/Humayun63/-humayun-react-hook/issues"
   },
-  "homepage": "https://github.com/Humayun63/-humayun-react-hook#readme"
+  "homepage": "https://github.com/Humayun63/-humayun-react-hook#readme",
+  "dependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup": "^4.12.1"
+  }
 }
